	children to a given element's children.

	* m4/ax_compare_version.m4: New M4 macro to compare version numbers in
	a configure script.

	* configure.ac: Updated the required autoconf version to 2.60 (for
	official Erlang support). Removed directives which were never used
	and already commented out. Check Erlang kernel's version to
	automatically enable or disable erl_ddll workaround.

2007-05-15  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/server/exmpp_server_compression.erl (methods_list2),
	src/server/exmpp_server_sasl.erl (mechanisms_list2): Verify if the
	given argument is an authentic string.

	* src/core/exmpp_sup.erl: Do not use supervisor:start/3 because it
	never existed. Spotted by Dialyzer.

2007-05-04  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/core/exmpp_xml.erl: Unlink port before stopping it. This
	prevents an 'EXIT' message sent to the port owner.

	* doc/overview.edoc: Nano update of the application overview.

2007-04-20  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* doc/Makefile.am: Fixed documentation build: the new sources layout
	broke it. Also add `make install' support.

2007-04-18  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* include/exmpp.hrl: Added resource binding namespace.

	* src/client/exmpp_client_binding.erl,
	src/server/exmpp_server_binding.erl: New modules to deal with Resource
	Binding.

	* src/client/exmpp_client_session.erl,
	src/server/exmpp_server_session.erl: New modules to deal with Session
	Establishment.

	* src/client/exmpp_client_tls.erl: Renamed a variable to be consistent
	with other modules.

	* src/Makefile.am, src/Emakefile.in, ebin/Makefile.am: Connected new
	modules to the build.

2007-04-12  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/core/exmpp_stream.erl, src/client/exmpp_client_stream.erl,
	src/server/exmpp_server_stream.erl: Removed `stream_' prefix from all
	functions.

	* src/server/exmpp_server_stream.erl (features): New function to build