@@ -24,6 +24,9 @@
 	and already commented out. Check Erlang kernel's version to
 	automatically enable or disable erl_ddll workaround.
 
+	* doc/Makefile.am: Documentation is now rebuilt only if one of the
+	source files is updated.
+
 2007-05-15  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>
 
 	* src/server/exmpp_server_compression.erl (methods_list2),
